kv260/2021.1/source/index.rst
###############################################################################################################
Kria KV260 Vision AI Starter Kit Applications
###############################################################################################################



.. include:: ../../../shared/somtoctree.txt



.. image:: docs/media/sc_rdme.png
   :width: 200
   :alt: Smart Camera
   :target: ./docs/smartcamera/smartcamera_landing.html

.. image:: docs/media/aib_rdme.png
   :width: 200
   :alt: AIBox-ReID
   :target: ./docs/aibox-reid/aibox_landing.html

.. image:: docs/media/dd_rdme.png
   :width: 200
   :alt:  Defect Detect
   :target: ./docs/defect-detect/defectdetect_landing.html

.. image:: docs/media/nlp_rdme.png
   :width: 200
   :alt:  NLP SmartVision
   :target: ./docs/nlp-smartvision/nlp_smartvision_landing.html




The Kria KV260 Vision AI Starter Kit is the first out-of-the box ready evaluation/development platform in the Xilinx® Kria portfolio of products. The Starter Kit is the platform of choice for development of vision specific target applications. It consists of a non-production K26 SOM plugged into a vision carrier card and equipped with a thermal solution of fan and heatsink. The SOM on the Starter Kit is based on Zynq® UltraScale+™ MPSoC architecture paired with 4 GB of DDR4 memory. The Starter Kit is vision ready as it features multi-camera support through 2x OnSemi Image Access System (IAS) connectors and 1x Raspberry Pi connector. One of the IAS connectors links to a dedicated OnSemi 13 MP AP1302 Image Sensor Processor (ISP), which can handle all image processing functions including interlaced High Dynamic Range (iHDR) operations. Beyond the vision-specific interfaces, there are a host of other interfaces for general purpose development as well. These include flexible I/O connectivity through Ethernet and USB, expandability via Pmod connectors.

Enabled by a growing ecosystem of accelerated applications from the Xilinx App Store, developers of all types can get applications up and running in under 1 hour, with no FPGA experience needed. From there, customization and differentiation can be added via preferred design environments, at any level of abstraction—from application software to AI model to FPGA design.

With both hardware and software development requirements simplified, the KV260 Vision AI Starter Kit is the fastest and easiest platform for application development with the goal of heading towards production volume deployment with the Kria K26 SOMs. The KV260 Vision AI Starter Kit is very accessible and priced at $199, it is a perfect vehicle to leverage during the development phase of your vision applications and further accelerates your time to market.



.. sidebar:: Getting Started
   
   For more information, see  `Getting Started with Kria KV260 Vision AI Starter Kit <https://www.xilinx.com/products/som/kria/kv260-vision-starter-kit/kv260-getting-started/getting-started.html>`_.



.. figure:: docs/media/KV260_Starter_Kit.png
   :width: 800

   KV260 Starter Kit





.. toctree::
   :maxdepth: 3
   :caption: KV260 Applications
   :hidden:

   Smart Camera <docs/smartcamera/smartcamera_landing>
   AIBox-ReID <docs/aibox-reid/aibox_landing>
   Defect Detect <docs/defect-detect/defectdetect_landing>
   NLP SmartVision <docs/nlp-smartvision/nlp_smartvision_landing>




.. toctree::
   :caption: KV260 Tutorials
   :maxdepth: 1
   :hidden:

   ./docs/linux_boot
   Build the Design Components <./docs/building_the_design>
   Building the Hardware Design Using Vivado <./docs/build_vivado_design>
   Create a Vitis Platform <./docs/build_vitis_platform>
   .docs/build_accel
   ./docs/build_petalinux
   ./docs/local_package_feed




.. toctree::
   :maxdepth: 3
   :caption: Other Releases
   :hidden:

   2022.1 <https://pages.gitenterprise.xilinx.com/techdocs/SOM/kv260/2022.1/build/html/index.html>



,,,,,,,,,,,,,,,,,,,,,,,,,,,




************************
Xilinx Support
************************

GitHub issues will be used for tracking requests and bugs. For questions, go to `forums.xilinx.com <http://forums.xilinx.com/>`_.

